--- a/Projects/Grid-Project/index.html
+++ b/Projects/Grid-Project/index.html
@@ -30,11 +30,11 @@
 
         </div>
         <div class="branding">
-          <img class="item-photo" src="../Resources/Imgs/cog.svg"/>
+          <img class="item-photo" src="Imgs/cog.svg"/>
             <p class="title">Settings</p>
-            <img class="item-photo" src="../Resources/Imgs/tooltip-question-outline.svg"/>
+            <img class="item-photo" src="Imgs/tooltip-question-outline.svg"/>
             <p>Support</p>
-            <img class="item-photo" src="../Resources/Imgs/clipboard-check-multiple.svg"/>
+            <img class="item-photo" src="Imgs/clipboard-check-multiple.svg"/>
             <p>Privacy</p>
         </div>
       </div>
@@ -48,7 +48,7 @@
         <div class="user">
           <ul>
             <li><img class ="icon-photo" src = "Imgs/bell-circle-outline.svg" alt="My Notifications" with=40px" height="40px"/></li>
-            <li><img class ="icon-photo" src = "../Resources/Imgs/bee_809052.png" alt="My Avatar" with=40px" height="40px"/></li>
+            <li><img class ="icon-photo" src = "Imgs/bee_809052.png" alt="My Avatar" with=40px" height="40px"/></li>
             <li class="title">Morgan Oakley</li>
           </ul>
         </div>
@@ -172,12 +172,12 @@
         <div class="trend">
           <p class="group-title">Trending</p>
           <div class="trend-items">
-            <img class="icon-photo" src="../Resources/Imgs/bee_809052.png"/>
+            <img class="icon-photo" src="Imgs/bee_809052.png"/>
             <div class="details">
               <p class="title">@tegan</p>
               <p>World Peace Builder</p>
             </div>
-            <img class="icon-photo" src="../Resources/Imgs/cat_3468377.png"/>
+            <img class="icon-photo" src="Imgs/cat_3468377.png"/>
             <div class="details">
               <p class="title">@tegan</p>
               <p>World Peace Builder</p>
@@ -187,7 +187,7 @@
               <p class="title">@tegan</p>
               <p>World Peace Builder</p>
             </div>
-            <img class="icon-photo" src="../Resources/Imgs/icons8-gift-under-48.png"/>
+            <img class="icon-photo" src="Imgs/icons8-gift-under-48.png"/>
             <div class="details">
               <p class="title">@tegan</p>
               <p>World Peace Builder</p>
