--- a/Projects/MyLibraryProject/index.html
+++ b/Projects/MyLibraryProject/index.html
@@ -6,61 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="DynamicSelect.css" />
+    <link rel="stylesheet" href="ImageList.css" />
     <title>Library</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
     <div class="header">
         <div class="app-title">
             <img id="library-icon" src="./images/1520624981944.png" alt="open-book-symbol" />
-            <h1>My Library</h1>            
+            <h1>My Library</h1>
         </div>
         <div class="add-book-container">
-            <button id="add-book-button" role="button" onclick="togglePopup()">
+            <button id="add-book-button" role="button">
                 Add Book
             </button>
         </div>
-        <div>
-            <div class="popup-container" id="add-book-popup">
-                <div><h2 id="insert-book-title-popup">Add a new book</h2></div>
-                <div>
-                    <label for="title">Title</label>
-                    <input type="text" id="title" name="title" placeholder="Book's title" required />
-                </div>
-                <div>
-                    <label for="author">Author</label>
-                    <input type="text" id="author" name="author" placeholder="Book's author" required />
-                </div>
-                <div>
-                    <label for="pages">Pages</label>
-                    <input type="number" id="pages" name="pages" placeholder="Book's pages" required />
-                </div>
-                <div class="switch-container">
-                    <p>Read</p>
-                    <input type="checkbox" id="read" name="read" class="toggle" />
-                    <label for="read" class="switch"></label>                    
-                </div>
-                
-                <div class="button-container">
-                    <button type="button" id="submit" onclick="addBookToLibrary()">
-                        Submit
-                    </button>
-                    <button type="button" id="cancel" onclick="cancelBook()">
-                        Cancel
-                    </button>
-                </div>
-                <div>
-                <select id="country" name="country" data-placeholder="Select a country" data-dynamic-select>
-                    <option value="United States" data-img="flags/us.png">United States</option>
-                    <option value="United Kingdom" data-img="flags/uk.png">United Kingdom</option>
-                    <option value="Japan" data-img="flags/ja.png">Japan</option>
-                </select>
+        <div class="backdrop" id="backdrop">
+        <div class="popup-container" id="add-book-popup">
+            <div>
+                <h2 id="insert-book-title-popup">Add a new book</h2>
             </div>
+            <div>
+                <label for="title">Title</label>
+                <input type="text" id="title" name="title" placeholder="Book's title" required />
             </div>
+            <div>
+                <label for="author">Author</label>
+                <input type="text" id="author" name="author" placeholder="Book's author" required />
+            </div>
+            <div>
+                <label for="pages">Pages</label>
+                <input type="number" id="pages" name="pages" placeholder="Book's pages" required />
+            </div>
+            <div class="switch-container">
+                <p>Read</p>
+                <input type="checkbox" id="read" name="read" class="toggle" />
+                <label for="read" class="switch"></label>
+            </div>
+
+            <div class="button-container">
+                <button type="button" id="submit" type="submit">
+                    Submit
+                </button>
+                <button type="button" id="cancel" onclick="cancelBook()">
+                    Cancel
+                </button>
+            </div>
+            <!-- <div>
+                    <select id="country" name="country" data-placeholder="Select a country" data-dynamic-select>
+                        <option value="0" data-img="./images/icons8-moleskine-94.png">Unread</option>
+                        <option value="2" data-img="./images/icons8-moleskine-94.png">In progress</option>
+                        <option value="1" data-img="./images/icons8-moleskine-94.png">Read</option>
+                    </select>
+            <   /div> -->
         </div>
     </div>
-    <div class="backdrop" id="backdrop"></div>
-    <div class="mainLibrary">        
+    </div>
+    <!-- <div class="backdrop" id="backdrop"></div> -->
+    <div class="mainLibrary">
+    </div>
+    <div class="footer">
+        <p class="">Copyright by Thu Le - 2024</p>
     </div>
     <script src="myBook.js"></script>
     <script src="DynamicSelect.js"></script>
