--- a/Projects/Sign-Up Form/index.html
+++ b/Projects/Sign-Up Form/index.html
@@ -1,90 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="with=device-with, initial-scale=1.0"/>
-    <script src="script.js" defer></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="styles.css">
     <title>Sign-Up Form</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
 </head>
+
 <body>
-    <div class="contain">
-        <div class="left-container">
-            <div class="left-container-background">            
-                <div class="left-container-logo">
-                    <img class="left-container-logo-image" src="images/odin-lined.png" alt="odin-image"/>
-                    <h1>ODIN</h1>
-                </div>    
-                <div class="left-container-footer">
-                    <p class="left-container-footer-text">Photo by Halie Wesr on Unsplash</p>
+    <main class="container-fluid d-inline-flex">
+        <div class="col-4 d-none d-md-flex flex-column align-items-center left-container">
+            <div class="mb-auto p-2 left-brand-container ">
+                <img class="left-logo" src="images/logo.png" alt="odin-image" />
+                <div class="text-center">
+                    <h1>SIGN IN/UP FORM</h1>
                 </div>
+            </div>
+            <div class="left-footer-container">
+                <p class="footer-text">Copyright by Thu Le</p>
             </div>
         </div>
 
-        <div class="main-container">
-            <div class="main-container-intro">
-                <p> 
-                    <strong>This is not a real online service! You know you need something
-                        like this in your life to help you realize your deepest dreams.<br>
-                        Sign up <em>now</em> to get started.
-
-                    </strong>    
-                </p>
-                <br/>
-                <p>
-                    <strong> You <i>know</i> you want to.</strong>
-                </p>
+        <div class="col-xs-12 col-md-8">
+            <div class="backdrop"> </div>
+            <div class='container' id='right-container'>
+                <div class="form sign-up-container">
+                    <form id='signup-form' action="" method="post">
+                        <legend class="form-title">Sign Up</legend>
+                        <div class="social-container">
+                            <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                            <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                        <span>or use your email for registration</span>
+                        <input type="text" id="fullname" placeholder="Full name" />
+                        <input type="email" name="email" id="email" placeholder="Email"
+                            title="Enter your email in example@mail.com format" required />
+                        <input type="date" name="birthdate" id="birthdate" placeholder="Date of Birth"
+                            title="Enter your birthdate" required />
+                        <div class="form-password">
+                            <input type="password" name="password" id="password" placeholder="Password" minlength="8"
+                                oninput="validatePass()" title="Enter your password" required />
+                            <div class='toggle-container'>
+                                <i class="toggle-password"></i>
+                            </div>
+                        </div>
+                        <div class="form-password">
+                            <input type="password" name="confirmedpass" id="confirmedpass" minlength="8"
+                                placeholder="Confirm password" title="Confirm your password" oninput="validatePass()"
+                                required />
+                            <div class='toggle-container'>
+                                <i class="toggle-password fa fa-eye"></i>
+                            </div>
+                        </div>
+                        <div class="error_message"></div>
+                        <div class="d-inline-block align-middle">
+                            <button class="ghost" id="signupBtn">Sign Up</button> &nbsp;
+                            <!-- <button class='btn-icon icon' type='button' onclick="resetFormData()">                                                              
+                            </button> -->
+                        </div>
+                        <!-- <div class="login p-3">
+                            <p class="login-text"> Already have an account? </p> &nbsp;
+                            <a class="login-form" type='button' id="login-link">Log in </a>
+                        </div> -->
+                    </form>
+                </div>
+                <div class="form sign-in-container">
+                    <form id="login-form">
+                        <!-- <h1>Sign in</h1> -->
+                        <legend class="form-title">Sign In</legend>
+                        <div class="social-container">
+                            <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                            <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                        <span>or use your account</span>
+                        <input type="email" placeholder="Email" id="email-login" required/>
+                        <input type="password" placeholder="Password" id="password-login" required/>
+                        <div class="error_message"></div>
+                        <a href="#">Forgot your password?</a>
+                        <div class="px-2">
+                            <button class="ghost" type="submit">Sign In</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="overlay-container">
+                    <div class="overlay">
+                        <div class="overlay-panel overlay-left">
+                            <!-- <h1>Welcome Back!</h1> -->
+                            <p class="mt-5">Already have an account, please login to keep in touch with us!</p>
+                            <div class="button-container px-2">
+                                <button class="shining" id="loginBtn">
+                                    LOG IN
+                                    <svg fill="currentColor" viewBox="0 0 24 24" class="icon">
+                                        <path clip-rule="evenodd"
+                                            d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+                                            fill-rule="evenodd"></path>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="overlay-panel overlay-right">                            
+                            <p class="mt-5">Sign up with your infomation and start journey with us</p>
+                            <div class="button-container px-2">
+                                <button class="shining" id="registerBtn">
+                                    REGISTER
+                                    <svg fill="currentColor" viewBox="0 0 24 24" class="icon">
+                                        <path clip-rule="evenodd"
+                                            d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+                                            fill-rule="evenodd"></path>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
-            <form action="" method="post">
-                <div class ="form">
-                <legend class="form-title">Let's do this!</legend>
-                <div class="form-input">
-                    <label for="firstname">First name</label>
-                    <input type="text" name="firstname" id="firstname"  />
+            <div class="login-content">
+                <div class="birthday-content">
+                    <h2>Hello, Friend!</h2>
+                    <p>Happy birthday to you!<p>
                 </div>
-                <div class="form-input">
-                    <label for=lastname">Last name</label>
-                    <input type="text" name="lastname" id="lastname"  />
-                </div>
-                <div class="form-input">
-                    <label for=email">Email</label>
-                    <input type="email" name="email" id="email"  
-                    title="Enter your email in example@mail.com format" required/>
-                </div>
-                <div class="form-input">
-                    <label for=phone">Phone number</label>
-                    <input type="text" name="phone" id="phone" minlength="10"
-                    maxlength="12" pattern="[0-9]+"
-                    title="Please enter only numeric values for phone number" 
-                    oninput="validatePhone()" required/>
-                </div>
-                <div class="form-input">
-                    <label for=password">Password
-                        <span class="toggle-password" onclick="togglePasswordVisibility()">👁️</span>
-                    </label>
-                    <input type="password" name="password" id="password" placeholder=" " 
-                    minlength="8" oninput="passValid()" required  />                    
-                </div>
-                <div class="form-input">
-                    <label for=confirmedpass">Confrimed Password
-                        <span id="password-eye" class="toggle-password" onclick="toggleConfirmPasswordVisibility()">👁️</span>
-                    </label>
-                    <input type="password" name="confirmedpass" id="confirmedpass" 
-                    minlength="8" oninput="passValid()" required />
-                </div>
-                <div class="error_message"></div>
-            </div>
-            </form>
-            <div class="submit">
-                <button class="create-account" type="submit">Create Account</button>
-            </div>
-            <div class="login">
-                <p class="login-text"> Aldready have an account? </p>
-                <a class="login-link" href="">Log in </a>
-
             </div>
         </div>
-        
-    </div> 
+    </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+    <script src="script.js" defer></script>
 </body>
+
 </html>
